--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "openai": "^4.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
   },
